fix: en archivo js se sustituye .added por .add en línea 61

--- a/formulario.html
+++ b/formulario.html
@@ -37,7 +37,7 @@
   </form>
 
   <div>
-    <h2>Lista de invitados</h2>
+    <h2 id="lista-de-invitados">Lista de invitados</h2> <!-- se agrega id requerido en js -->
 
   </div>
 
